salesforce_sfdx/main/default/objects/%vlocity_namespace%__OrchestrationItem__c/fields/Callout_Request_Issued__c.field-meta.xml
<CustomField>
    <fullName>Callout_Request_Issued__c</fullName>
    <inlineHelpText>Date and time when a callout request was sent to an external system</inlineHelpText>
    <label>Callout Request Issued</label>
    <type>DateTime</type>
</CustomField>