salesforce_sfdx/main/default/objects/%vlocity_namespace%__OrchestrationItem__c/fields/Callout_Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Callout_Request_Payload__c</fullName>
    <label>Callout Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>