salesforce_sfdx/main/default/objects/%vlocity_namespace%__OrchestrationItem__c/fields/Callout_Response_Payload_Sync__c.field-meta.xml
<CustomField>
    <fullName>Callout_Response_Payload_Sync__c</fullName>
    <label>Callout Response Payload (Sync)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>