salesforce_sfdx/main/default/objects/%vlocity_namespace%__OrchestrationItem__c/fields/Callout_Response_Sync_Received__c.field-meta.xml
<CustomField>
    <fullName>Callout_Response_Sync_Received__c</fullName>
    <inlineHelpText>Date and time when a callout response was sent to an external system</inlineHelpText>
    <label>Callout Response (Sync) Received</label>
    <type>DateTime</type>
</CustomField>